Atualização README e Início de adaptação tablet

--- a/index.html
+++ b/index.html
@@ -35,9 +35,17 @@
                 </li>
             </ul>
             <img src="./assets/Logo.svg" alt="Logo da AluraBooks" class="container__imagem">
+            <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
+
+        <ul class="opcoes">
+            <li class="opcoes__item">Categorias</li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+            <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+        </ul>
+
         <div class="container">
-            <a href="#"><img src="./assets/Favoritos.svg" alt="Meus favoritos" class="container__imagem"></a>
+            <a href="#"><img src="./assets/Favoritos.svg" alt="Meus favoritos" class="container__imagem container__imagem-transparente"></a>
             <a href="#"><img src="./assets/Compras.svg" alt="Carrinho de compras" class="container__imagem"></a>
             <a href="#"><img src="./assets/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
         </div>
@@ -208,6 +216,10 @@
         const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
             slidesPerView: 3,
+            loop: true,
+            autoplay: {
+                delay: 3000,
+            },
             pagination: {
                 el: '.swiper-pagination',
                 type: 'bullets',
