--- a/index.html
+++ b/index.html
@@ -248,31 +248,31 @@
             <li class="lista-rodape__titulo">Educação Online</li>
             <li class="lista-rodape__item">
                 <img src="./assets/Alura.svg" alt="Logo da Alura">
-                <a href="#">Alura</a>
+                <a href="#" class="lista-rodape__link">Alura</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/AluraEmpresas.svg" alt="Logo da Alura Empresas">
-                <a href="#">Alura Para Empresas</a>
+                <a href="#" class="lista-rodape__link">Alura Para Empresas</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/AluraLATAM.svg" alt="Logo da Alura LATAM">
-                <a href="#">Alura LATAM</a>
+                <a href="#" class="lista-rodape__link">Alura LATAM</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/AluraStart.svg" alt="Logo da Alura Start">
-                <a href="#">Alura Start</a>
+                <a href="#" class="lista-rodape__link">Alura Start</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/MusicDot.svg" alt="Logo da MusicDot">
-                <a href="#">MusicDot</a>
+                <a href="#" class="lista-rodape__link">MusicDot</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/AluraLingua.svg" alt="Logo da Alura Língua">
-                <a href="#">Alura Língua</a>
+                <a href="#" class="lista-rodape__link">Alura Língua</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/PM3.svg" alt="Logo da PM3">
-                <a href="#">PM3</a>
+                <a href="#" class="lista-rodape__link">PM3</a>
             </li>
         </ul>
 
@@ -280,31 +280,31 @@
             <li class="lista-rodape__titulo">Comunidade</li>
             <li class="lista-rodape__item">
                 <img src="./assets/HipstersTech.svg" alt="Logo da Hipsters ponto Tech">
-                <a href="#">Hipsters ponto Tech</a>
+                <a href="#" class="lista-rodape__link">Hipsters ponto Tech</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/ScubaDev.svg" alt="Logo da Scuba Dev">
-                <a href="#">Scuba Dev</a>
+                <a href="#" class="lista-rodape__link">Scuba Dev</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/LayersTech.svg" alt="Logo da Layers ponto Tech">
-                <a href="#">Layers ponto Tech</a>
+                <a href="#" class="lista-rodape__link">Layers ponto Tech</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/LikeABoss.svg" alt="Logo da Like a Boss">
-                <a href="#">Like a Boss</a>
+                <a href="#" class="lista-rodape__link">Like a Boss</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/CarreiraSemFronteira.svg" alt="Logo da Carreira Sem Fronteira">
-                <a href="#">Carreira sem Fronteira</a>
+                <a href="#" class="lista-rodape__link">Carreira sem Fronteira</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/HipstersJobs.svg" alt="Logo da Hipsters ponto Jobs">
-                <a href="#">Hipsters ponto Jobs</a>
+                <a href="#" class="lista-rodape__link">Hipsters ponto Jobs</a>
             </li>
             <li class="lista-rodape__item">
                 <img src="./assets/GUJ.svg" alt="Logo da GUJ">
-                <a href="#">GUJ</a>
+                <a href="#" class="lista-rodape__link">GUJ</a>
             </li>
         </ul>
 
